# sierpinski-carpet

./: .gitignore  CMakeLists.txt  README.md  main.c  run.sh
